# mt-multimodal_optimization

./: .gitignore  .gitmodules  Benchmark.sh  CMakeLists.txt  README.md  benchmark_script.sh  benchmark_sequential.sh  try_benchmark.sh
IROS/Benchmarks/: commandsForBenchmarkPlotter.txt
IROS/Benchmarks/discRooms/: benchmark_BITKOMO.db  benchmark_BITstar.db  benchmark_FMT.db  runtime_table0.json
IROS/Benchmarks/kukaBox/: benchmark_BITKOMO.db  benchmark_BITstar.db  benchmark_KOMO.db  runtime_table0.json
IROS/Benchmarks/kukaShelf/: benchmark_BITKOMO.db  benchmark_BITstar.db  benchmark_FMT.db  benchmark_KOMO.db  runtime_table0.json
IROS/Benchmarks/oneMobilePanda/: benchmark_BITKOMO.db  benchmark_BITstar.db  benchmark_FMT.db  runtime_table0.json
IROS/Benchmarks/twoFixedPandas/: benchmark_BITKOMO.db  benchmark_BITstar.db  benchmark_KOMO.db  runtime_table0.json
IROS/Benchmarks/twoMobilePandas/: benchmark_FMT.db  benchmark_KOMO.db  runtime_table0.json
Models/: 2D_arm.g  Configuration.txt  possible_configurations.txt
data/: plot_both.py  plot_optimization.py  plot_success_rate.py
data/RRT*/: RRTStar.db  RRTStar.json
debug/: 2d_debug.txt  3_finalPathConfigs.txt  7_configs.txt  finalPathConfigs.txt  initPath(print).txt  initPath.txt  initPathConfigs.txt
examples/: runManipulatorEx.sh
examples/2D_Arm/: 2D.g  Makefile  TODO  main.cpp
examples/2D_Arm_withOptim/: TODO  main.cpp  rai.cfg
examples/2D_bot/: Makefile  main.cpp  rai.cfg
examples/Just_Visualize_Example/: Makefile  main.cpp
examples/Main/: FeasiblePath.txt  debugFunctions.h  guidlineForWritingManipSeq.txt  keyframeTree.cpp  keyframeTree.h  main.cpp  manipulationSequence.txt  manipulationSequence2.txt  manipulationSequence3.txt  sequential.cpp  sequentialOptimization.cpp  sequentialSampling.cpp
examples/Manipulator/: main.cpp  rai.cfg
examples/Models/: 10_MobileManipulator.g  1_kuka_shelf.g  2D_arm.g  2D_bot.g  2D_snake.g  2_Two_Pandas.g  3_TwoMobileManipulators  3_TwoMobileManipulators.g  4_kukaWithBox.g  4_kuka_box.g  5_disc_obstacle.g  6_rectangle_opening.g  7_disc_rooms.g  8_TwoMobileManipulators_hard.g  9_TwoMobileRobots_hard.g  Configuration.txt  MovingDisc.g  beerBox.g  box.g  bugTrap.g  four_rooms.g  kuka_multimodal.g  maze.g  model2.g  opening.g  panda_mobile.g  rooms.g  s1_2d_manip.g  s2_bugtrap.g  s3_manip_table.g  s4_beer_table.g  small_box.g  two_boxes.g
examples/Models/2D_arm/: 3.g  4.g  5.g  6.g
examples/SequentialPlanning/: main.cpp
examples/Test_KOMO/: main.cpp
examples/goalRegionTest/: main.cpp
examples/ompl/: Makefile
examples/ompl-komo/: main.cpp  main_old.cpp  model.g
examples/only_KOMO/: main.cpp  model.g  pickplace.cpp
examples/sequential/: main.cpp  manipulationSequence.txt
src/: Optimizer.cpp  Optimizer.h  main.cpp  mainRai.cpp
src/Models/: 2D_arm.g  2D_bot.g
src/multilevel/datastructures/: BundleSpace.h  BundleSpaceGraph.h  BundleSpaceGraphSparse.h  BundleSpaceSequence.h  BundleSpaceSequenceImpl.h  ParameterExponentialDecay.h  ParameterSmoothStep.h  Projection.h  ProjectionFactory.h
src/multilevel/datastructures/graphsampler/: GraphSampler.h  RandomDegreeVertex.h  RandomEdge.h  RandomVertex.h  VisibilityRegion.h
src/multilevel/datastructures/graphsampler/src/: GraphSampler.cpp  RandomDegreeVertex.cpp  RandomEdge.cpp  RandomVertex.cpp  VisibilityRegion.cpp
src/multilevel/datastructures/importance/: BundleSpaceImportance.h  Exponential.h  Greedy.h  Uniform.h
src/multilevel/datastructures/importance/src/: Exponential.cpp  Greedy.cpp  Uniform.cpp
src/multilevel/datastructures/metrics/: BundleSpaceMetric.h  Geodesic.h
src/multilevel/datastructures/metrics/src/: BundleSpaceMetric.cpp  Geodesic.cpp
src/multilevel/datastructures/pathrestriction/: FindSection.h  FindSectionPatternDance.h  FindSectionSideStep.h  Head.h  HeadAnalyzer.h  PathRestriction.h  PathSection.h
src/multilevel/datastructures/pathrestriction/src/: FindSection.cpp  FindSectionPatternDance.cpp  FindSectionSideStep.cpp  Head.cpp  HeadAnalyzer.cpp  PathRestriction.cpp  PathSection.cpp
src/multilevel/datastructures/projections/: EmptySet.h  FiberedProjection.h  Identity.h  None.h  RNSO2_RN.h  RN_RM.h  Relaxation.h  SE2RN_R2.h  SE2_R2.h  SE3RN_R3.h  SE3_R3.h  SO2N_SO2M.h  XRN_X.h  XRN_XRM.h  XRN_XRM_SE2.h  XRN_XRM_SE3.h  XRN_XRM_SO2.h  XRN_XRM_SO3.h  XRN_X_SE2.h  XRN_X_SE3.h  XRN_X_SO2.h  XRN_X_SO3.h
src/multilevel/datastructures/projections/src/: EmptySet.cpp  FiberedProjection.cpp  Identity.cpp  None.cpp  RNSO2_RN.cpp  RN_RM.cpp  Relaxation.cpp  SE2RN_R2.cpp  SE2_R2.cpp  SE3RN_R3.cpp  SE3_R3.cpp  SO2N_SO2M.cpp  XRN_X.cpp  XRN_XRM.cpp  XRN_XRM_SE2.cpp  XRN_XRM_SE3.cpp  XRN_XRM_SO2.cpp  XRN_XRM_SO3.cpp  XRN_X_SE2.cpp  XRN_X_SE3.cpp  XRN_X_SO2.cpp  XRN_X_SO3.cpp
src/multilevel/datastructures/propagators/: BundleSpacePropagator.h  Geometric.h
src/multilevel/datastructures/propagators/src/: BundleSpacePropagator.cpp  (+1 more)
src/multilevel/datastructures/src/: BundleSpace.cpp  BundleSpaceGraph.cpp  BundleSpaceGraphSparse.cpp  PlannerDataVertexAnnotated.cpp  PlannerMultiLevel.cpp  Projection.cpp  ProjectionFactory.cpp
src/multilevel/planners/multimodal/: LocalMinimaSpanners.h  PathSpaceSparse.h
src/multilevel/planners/qmp/: QMP.h  QMPImpl.h  QMPStar.h  QMPStarImpl.h
src/multilevel/planners/qrrt/: BiQRRT.h  BiQRRTImpl.h  QRRT.h  QRRTImpl.h  QRRTStar.h  QRRTStarImpl.h  STAR.h  STARImpl.h  SparseTree.h
src/multilevel/planners/sparse/: MultiSPARS.h  MultiSPARSImpl.h  SMLR.h  SMLRImpl.h
src/multimodal_optimizers/: PathOptimizer.h  PathOptimizerKOMO.cpp  PathOptimizerKOMO.h
src/multimodal_optimizers/src/: PathOptimizer.cpp  PathOptimizerKOMO.cpp
src/path/: BITKOMO.cpp  BITKOMO.h  PKOMO.cpp  PKOMO.h  PathOptimizerKOMO.cpp  PathOptimizerKOMO.h  Planner_KOMO.cpp  Planner_KOMO.h  ProblemDefinition_ext.cpp  ProblemDefinition_ext.h  SequentialKOMO.cpp  SequentialKOMO.h  WeightedGoalStates.cpp  WeightedGoalStates.h  naiveSequentialPlanner.cpp  naiveSequentialPlanner.h  poisson.h  sktp.cpp  sktp.h
visualize/data/: plot_both.py  plot_optimization.py  plot_points.py  plot_success_rate.py
(+19 files in other folders)
